fix 'a' element vertical-align

--- a/client/styles/components/_card.scss
+++ b/client/styles/components/_card.scss
@@ -55,6 +55,7 @@ article.card{
 		a{
 			color: #97A0AF;
 			text-decoration: none;
+			vertical-align: super;
 		}
 		i{
 			margin-left: 10px;
@@ -140,6 +141,7 @@ article.card-steps{
 		a{
 			color: #97A0AF;
 			text-decoration: none;
+			vertical-align: super;
 		}
 		i{
 			margin-left: 10px;
